<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>strapi.cms.image</groupId>
	<artifactId>strapi</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>strapi-images</name>
	<packaging>war</packaging>
	<properties>
		<package.war.filename>ecr-test-${project.version}</package.war.filename>
		<!-- JPA logging -->
		<jpa.hibernate.show_sql>false</jpa.hibernate.show_sql>
		<jpa.hibernate.format_sql>false</jpa.hibernate.format_sql>
		<version.apache.maven.war.plugin>3.4.0</version.apache.maven.war.plugin>
		<java.version>17</java.version>
		<!-- Arquillian -->
		<arquillian.cube.autostart />
	</properties>
	<dependencies>
		<!-- REST START -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.35</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
			<version>2.35</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.35</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
			<version>2.35</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>2.35</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.32</version>
		</dependency>
		<dependency>
			<groupId>javax.ejb</groupId>
			<artifactId>javax.ejb-api</artifactId>
			<version>3.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>2.12.5</version>
		</dependency>

		<!-- Hibernate Core -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.5.7.Final</version>
		</dependency>
		<!-- Driver JDBC para MySQL -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.26</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-core</artifactId>
			<version>3.1.3.Final</version>
		</dependency>
		<!-- Dependencias de implementación (opcional) -->
    <dependency>
        <groupId>org.jboss.spec.javax.ejb</groupId>
        <artifactId>jboss-ejb-api_3.2_spec</artifactId>
        <version>1.0.2.Final</version>
    </dependency>
    <dependency>
        <groupId>javax.enterprise</groupId>
        <artifactId>cdi-api</artifactId>
        <version>2.0</version>
        <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>3.0</version>
	</dependency>

     
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
<!--			<version>3.3.0</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-web</artifactId>-->
<!--			<version>3.3.0</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.6</version> <!-- O la versión que estés utilizando -->
		</dependency>


	</dependencies>
	<build>
		<!-- RESOURCES FILTERING -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		<plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>

<!--		<plugins>-->
<!--			 War construction -->
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-war-plugin</artifactId>-->
<!--				<version>${version.apache.maven.war.plugin}</version>-->
<!--				<configuration>-->
<!--					<warName>${package.war.filename}</warName>-->
<!--					 web resources that go to WEB-INF root directory need to-->
<!--					be filtered -->
<!--						too -->
<!--					<failOnMissingWebXml>false</failOnMissingWebXml>-->
<!--					<webResources>-->
<!--						<resource>-->
<!--							<directory>src/main/webapp</directory>-->
<!--							<targetPath>WEB-INF</targetPath>-->
<!--							<filtering>true</filtering>-->
<!--						</resource>-->
<!--					</webResources>-->
<!--					<packagingExcludes>-->
<!--						**/unit/**/*Test.java,integration/**/*Test.java</packagingExcludes>-->
<!--				</configuration>-->
<!--			</plugin>-->
<!--		</plugins>-->
	</build>
</project>